# sobel

./: CMakeLists.txt  LICENSE  README.md
include/: sobel_filter.h
source/: sobel_filter.cpp  sobel_filter_avx2.cpp  sobel_filter_avx512.cpp  sobel_filter_sse2.cpp
